--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -28,6 +28,12 @@
     @media screen and (max-width: 1100px) {
         display: none;
     }
+    
+}
+.ca{
+    background: rgba(53, 151, 64, 0.08);
+    border-radius: 30px;
+    padding: 0px 20px;
 }
 
 .check {
